Thu May 16 17:15:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_eval.c (rb_catch_obj): add volatile to tag to prevent crash
	  experimentally.
	  http://www.rubyist.net/~akr/chkbuild/debian/ruby-trunk/log/20130515T133500Z.log.html.gz

Thu May 16 16:19:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (verconf.in): no longer used.

	* win32/Makefile.sub (config.status): fix typo.

	* configure.in, template/verconf.h.in (RUBY_EXEC_PREFIX): fix for
	  default prefix.

Thu May 16 13:12:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/verconf.h.in: generate verconf.h from the template and
	  rbconfig.rb.

Thu May 16 05:47:18 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix syntax error.
	  Thanks @spastorino! [ruby-core:55011]

Thu May 16 03:05:45 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_node_newnode): use newobj_of() instead of rb_newobj().

Thu May 16 02:03:39 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/depend: Add a dependency for ifaddr.o.

Thu May 16 01:44:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (verconf.h): $< cannot be used in explicit rules with
	  nmake.

	* win32/Makefile.sub (CONFIG_H): create verconf.in instead of
	  verconf.h.

Thu May 16 01:25:07 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: only emit warnings when
	  -w is enabled.

Wed May 15 18:58:17 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj): rename to `newobj_of' and accept additional
	  three parameters v1, v2, v3. newobj_of() do OBJSETUP() and
	  fill values with v1, v2, v3.

	* gc.c (rb_data_object_alloc, rb_data_typed_object_alloc):
	  use newobj_of().

Wed May 15 17:55:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_PLATFORM): move to config.h as needed by
	  version.c.

Wed May 15 17:04:11 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add an additional RGENGC_PROFILE mode (2).